src/test/deca/context/valid/greater_notvalid_int_float.deca
// Description : comparaison d'un entier aver une chaine de caractère
// 	 
//Resultat:
//      Erreur Contextuelle : la comparaison d'un entier avec un float n'a pas de sens.
//      Ligne 7 : /src/test/deca/etapeB/invalid/equals_notvalid.deca:7:5: cannot use operator greater on two different type
{
if ( 3 >2.3){
   println("this shouldn't be printed");
}
}